@@ -2,12 +2,11 @@ The analysis-extras plugin provides additional analyzers that rely
 upon large dependencies/dictionaries.
 
 It includes integration with ICU for multilingual support, and 
-analyzers for Chinese, Japanese, and Polish.
+analyzers for Chinese and Polish.
 
 Relies upon the following lucene components (in lucene-libs/):
 
  * lucene-icu-X.Y.jar
- * lucene-kuromoji-X.Y.jar
  * lucene-smartcn-X.Y.jar
  * lucene-stempel-X.Y.jar
  
